Included my part

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
     	<artifactId>zoodb</artifactId>
     	<version>0.4.9</version>
     </dependency>
+    <dependency>
+   	<groupId>org.jdom</groupId>
+    	<artifactId>jdom</artifactId>
+    	<version>1.1</version>
+    </dependency>
   </dependencies>
   
   <build>
@@ -33,6 +38,7 @@
 	  	<plugin>
 	    	<groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
+	    <version>2.3.2</version>
             <configuration>
                 <source>1.8</source>
                 <target>1.8</target>
