--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <repositories>
+  <repository>
+    <id>basex</id>
+    <name>BaseX Maven Repository</name>
+    <url>http://files.basex.org/maven</url>
+  </repository>
+</repositories>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -36,6 +44,16 @@
     	<artifactId>mongodb-driver</artifactId>
     	<version>3.4.2</version>
     </dependency>
+    <dependency>
+  <groupId>org.basex</groupId>
+  <artifactId>basex</artifactId>
+  <version>8.6</version>
+</dependency>
+	<dependency>
+  <groupId>org.basex</groupId>
+  <artifactId>basex-api</artifactId>
+  <version>8.6</version>
+</dependency>
   </dependencies>
   
   <build>
