--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
   <artifactId>basex-api</artifactId>
   <version>8.6</version>
 </dependency>
+	 
+
+<dependency>
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
+<version>4.11</version>
+<scope>test</scope>
+</dependency>
   </dependencies>
   
   <build>
